--- a/css/stylos.css
+++ b/css/stylos.css
@@ -86,7 +86,7 @@
 }
 
 .portadaindex{
-    background-color: #3b4453;
+    background-image: linear-gradient(-45deg, #3b6775 0%,  #243c5c 100%);
     
 }
 
